
# pyproject.toml

[build-system]
requires      = ["setuptools<61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzz"
version = "2.0.0"
description = "A package for fuzz testing command driven flight software."
readme = "README.md"
authors = [
    { name = "Tracy Clark", email = "tracy.a.clark@jpl.nasa.gov"},
    { name = "Klaus Havelund", email = "klaus.havelund@jpl.nasa.gov"},
    { name = "Vivek Reddy", email = "vivek.j.reddy@jpl.nasa.gov"}
]
license = { file = "LICENSE.txt" }
dependencies = [
    "dotmap >= 1.3.30",
    "future >= 1.0.0",
    "z3-solver >= 4.13.2.0",
    "lark >= 1.2.2"
]
requires-python = ">=3.6"

[tool.setuptools]
packages = ["fuzz"]
package-dir = { "" = "src" }

[project.urls]
Homepage = "https://github.jpl.nasa.gov/lars/fuzzing"
